--- a/page1.html
+++ b/page1.html
@@ -133,7 +133,7 @@ function clearIt(){
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#">QuizYet?</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -152,9 +152,9 @@ function clearIt(){
 <div class="container-fluid text-center">    
   <div class="row content">
     <div class="col-sm-2 sidenav">
+      <!-- <p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
+      <p><a href="#">Link</a></p> -->
     </div>
     <div class="col-sm-8 text-left"> 
             Front: <textarea class="text" type = "text" value = "Front" id='front' rows="4" cols="50"></textarea>
@@ -175,7 +175,7 @@ function clearIt(){
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
-        <input class="button" type = "button" id = "next" value = "Next Card"  onclick="location.href='secondquizyet.html';">      
+        <input class="button" type = "button" id = "next" value = "Next Card"  >      
       </div>
       <div class="well">
         <input class="button" type = "button" id = "done" value = "Done" onclick="location.href='secondquizyet.html';"> 
