--- a/secondquizyet.html
+++ b/secondquizyet.html
@@ -84,9 +84,12 @@
 
   $( document ).ready(function() {
 
-      $('h1').append("QuizYet Team 2016");
+      $('h1').append("Is there a Quiz yet?");
+      $('h4').append("Created by QuizYet Team 2016.");
       // $('h2').append(localStorage.getItem("Back"));
       });
+
+
 //    $("#done").click(function(){
 //        var textarea =$("#front").val();
 //        console.log(textarea);
@@ -148,13 +151,13 @@
     </script> 
       <h1></h1>
       <hr>
-      <h2>
+      <h4> </h4>
        <!--  <input type = "text" id = "next" placeholder = "Your Answer"  onclick = "check(next)";></input>
         <textarea class="text" type = "text" value = "Done" id='done' rows="4" cols="50"></textarea>
 
         <input type = "button" id = "done" value = "Done" onclick="check()";></input> -->
 
-      </h2>
+    
     </div>
     <div class="col-sm-2 sidenav">
     </div>
