--- a/secondquizyet.html
+++ b/secondquizyet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Testing...</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -164,7 +164,7 @@
   </div>
 </div>
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p>Made By Bethany Chen, Yan Lin Chen, Rui Sun, and Simon Yang</p>
 </footer>
 </body>
 </html>
